--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,4 @@
-torch==2.0.1
-torchvision==0.15.2
-transformers==4.37.2
-megfile==3.1.2
-tiktoken
-verovio
-opencv-python
+git+https://github.com/huggingface/transformers
+torch
 accelerate
-numpy==1.26.4
-shutils
-pillow
+Pillow
